agregado del apartado 'engines' en el package json

--- a/views/fragments/head.ejs
+++ b/views/fragments/head.ejs
@@ -12,5 +12,5 @@
   <!-- Favicon -->
   <link rel="shortcut icon" href="/imgs/favicon.ico" type="image/x-icon">
 
-  <title>Smart Wallet</title>
+  <title>Smart wallet</title>
 </head>
