--- a/views/fragments/navbar.ejs
+++ b/views/fragments/navbar.ejs
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    <li><a href="main">Inicio</a></li>
+    <li><a href="/main">Inicio</a></li>
     <li><a href="/ingresos-del-mes">Ver ingresos del mes</a></li>
     <li><a href="/egresos-del-mes">Ver egresos del mes</a></li>
   </ul>
