--- a/views/fragments/navbar.ejs
+++ b/views/fragments/navbar.ejs
@@ -1,8 +1,39 @@
-<nav>
-  <ul>
-    <li><a href="/main">Inicio</a></li>
-    <li><a href="/ingresos-del-mes">Ver ingresos del mes</a></li>
-    <li><a href="/egresos-del-mes">Ver egresos del mes</a></li>
-  </ul>
-  <a href="/auth/logout">Logout</a>
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/main">
+      <img src="/imgs/logo smart wallet.png" alt="logo smart wallet" width="40">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="/main">Inicio</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Ver movimientos
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="/ingresos-del-mes">Ingresos del mes</a></li>
+            <li><a class="dropdown-item" href="/egresos-del-mes">Egresos del mes</a></li>
+          </ul>
+        </li>
+      </ul>
+      <span class="container-mi-cuenta">
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Mi cuenta
+              </a>
+              <ul class="dropdown-menu container-options-mi-cuenta" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="/auth/logout">Logout</a></li>
+              </ul>
+            </li>
+          </ul>
+      </span>
+    </div>
+  </div>
 </nav>
