--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@
 }
 .container-index {
   background-color: var(--marigold);
-  height: 100vh;
+  height: calc(100vh - 10vh);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -28,14 +28,14 @@
 }
 .titulo-pantalla-principal {
   text-align: center;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: bold;
   font-family: var(--primary-font);
 }
 
 .titulo-smart-wallet {
   text-align: center;
-  font-size: 2.7rem;
+  font-size: 3rem;
   font-weight: bold;
   font-family: var(--styled-font);
 }
