--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,10 @@
     <p class="titulo-pantalla-principal">Bienvenido a </p>
     <h1 class="titulo-smart-wallet">Smart Wallet</h1>
   </div>
-
+  
   <div class="container-logo-pantalla-principal">
     <img src="/imgs/logo smart wallet.png" alt="logo-smart-wallet" class="logo-pantalla-principal">
+    <a href="https://es.vecteezy.com/vectores-gratis/billetera" class="retribucion">Fuente de la imagen: Vecteezy</a>
   </div>
 
   <a href="/auth/google" class="link-login">
