--- a/views/fragments/head.ejs
+++ b/views/fragments/head.ejs
@@ -21,5 +21,5 @@
   <!-- Favicon -->
   <link rel="shortcut icon" href="/imgs/favicon.ico" type="image/x-icon">
 
-  <title>Smart wallet</title>
+  <title>Smart Wallet</title>
 </head>
