--- a/views/main.ejs
+++ b/views/main.ejs
@@ -3,7 +3,7 @@
 <body class="body-bienvenida body">
 
   <div class="container-saludo-de-bienvenida">
-    <p>¡Hola <%= user.firstName%>!</p>
+    <p class="saludo-user">¡Hola <%= user.firstName%>!</p>
     <p>Te doy la bienvenida a</p>
     <h1 class="brand-bienvenida">Smart Wallet</h1>
   </div>
