--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,55 +1,97 @@
 <%- include("./fragments/head") %>
 
-<body>
+<body class="body body-settings">
 
-  <h2>SETTINGS!</h1>
+  <h2>Configuración de categorías</h1>
 
-    <p>¿Cómo te gustaría dividir tu presupuesto?</p>
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content add-to-modal">
 
-    <form action="/settings/save" method="POST">
+        </div>
+      </div>
+    </div>
+    <!--  -->
 
-      <% if (settings.length !== 0) { %>
-      <table>
-        <tr>
-          <th>N°</th>
-          <th>Nombre categoría</th>
-          <th>Porcentaje asignado</th>
-          <th></th>
-          <th></th>
-        </tr>
-        <% for( let i = 0; i < settings.length; i++ ) { %>
-        <tr>
-          <td><%= i + 1 %></td>
-          <td><%= settings[i].catName %></td>
-          <td><%= settings[i].catPerc %></td>
-          <td><span id="btnEditar" onclick="editar('<%= settings[i]._id %>', '<%= settings[i].catName %>', '<%= settings[i].catPerc %>')">editar</span></td>
-          <td>
-            <a href="/settings/quitar-cat/<%= settings[i]._id %>">
-              quitar
-            </a>
-          </td>
-        </tr>
-        <% } %>
+    <p class="budget-ask">¿Cómo te gustaría dividir tu presupuesto?</p>
+
+    <% if (settings.length !== 0) { %>
+    <div class="container-gral-table">
+
+      <p class="titulo-tabla-cat">Categorías</p>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th>Nombre</th>
+            <th>Porcentaje</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for( let i = 0; i < settings.length; i++ ) { %>
+          <tr>
+            <td scope="row"><%= i + 1 %></td>
+            <td><%= settings[i].catName %></td>
+            <td><%= settings[i].catPerc %></td>
+            <td><span id="btnEditar" onclick="editar('<%= settings[i]._id %>', '<%= settings[i].catName %>', '<%= settings[i].catPerc %>')" data-bs-toggle="modal" data-bs-target="#staticBackdrop" class="btn-mini-table">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                  <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                  <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                </svg>
+              </span></td>
+            <td>
+              <a href="/settings/quitar-cat/<%= settings[i]._id %>" class="btn-mini-table">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                  <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+                  <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+                </svg>
+              </a>
+            </td>
+          </tr>
+          <% } %>
 
       </table>
       <% } %>
+    </div>
 
-      <div class="itemSettings">
-        <input type="text" name="catName" placeholder="Nombre de la categoría" autofocus>
-        <div>
-          <input type="number" name="catPerc" item-percentage placeholder="Porcentaje a asignar">%
+    <form action="/settings/save" method="POST">
+      <div class="container-form-add-cat">
+        <div class="form-floating mb-3 ">
+          <input type="text" name="catName" class="form-control" id="floatingInput" placeholder="Nombre de la categoría" autofocus>
+          <label for="floatingInput">Nombre de la categoría</label>
+        </div>
+        <div class="form-floating">
+          <input type="number" name="catPerc" class="form-control" id="floatingNumber" placeholder="Porcentaje" min="0">
+          <label for="floatingNumber">Porcentaje</label>
         </div>
       </div>
 
-      <button type="submit">
-        Aceptar
-      </button>
+      <div class="container-add-btn">
+        <button type="submit" class="cssbuttons-io-button-2 add-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+            <path fill="none" d="M0 0h24v24H0z"></path>
+            <path fill="#fff" d="M11 11V5h2v6h6v2h-6v6h-2v-6H5v-2z"></path>
+          </svg>
+          <span>Agregar</span>
+        </button>
+      </div>
     </form>
-    <a href="/main">
-      <button type="button">
-        Avanzar
-      </button>
-    </a>
+
+    <div class="container-btn-avanzar">
+      <a href="/main" class="btn-avanzar">
+        <button class="cssbuttons-io-button"> Avanzar
+          <div class="icon">
+            <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0 0h24v24H0z" fill="none"></path>
+              <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z" fill="currentColor"></path>
+            </svg>
+          </div>
+        </button>
+      </a>
+    </div>
 
     <%- include("./fragments/scripts") %>
 </body>
