--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  gap: 10px;
 }
 .container-titulo-pantalla-principal {
   color: var(--eggplant);
