--- a/views/fragments/head.ejs
+++ b/views/fragments/head.ejs
@@ -17,6 +17,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Prata&family=Rouge+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Tiro+Gurmukhi&display=swap" rel="stylesheet">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/imgs/favicon.ico" type="image/x-icon">
