--- a/views/ingresosDelMes.ejs
+++ b/views/ingresosDelMes.ejs
@@ -1,65 +1,99 @@
 <%- include("./fragments/head") %>
 
-<body>
+<body class="body body-ingresos-del-mes">
 
   <%- include("./fragments/navbar") %>
 
-  <h1>Ingresos del mes</h1>
+  <h3>Ingresos del mes</h1>
 
-  <div>
-    <a href="/ingresos-del-mes/0">Enero</a>
-    <a href="/ingresos-del-mes/1">Febrero</a>
-    <a href="/ingresos-del-mes/2">Marzo</a>
-    <a href="/ingresos-del-mes/3">Abril</a>
-    <a href="/ingresos-del-mes/4">Mayo</a>
-    <a href="/ingresos-del-mes/5">Junio</a>
-    <a href="/ingresos-del-mes/6">Julio</a>
-    <a href="/ingresos-del-mes/7">Agosto</a>
-    <a href="/ingresos-del-mes/8">Septiembre</a>
-    <a href="/ingresos-del-mes/9">Octubre</a>
-    <a href="/ingresos-del-mes/10">Noviembre</a>
-    <a href="/ingresos-del-mes/11">Diciembre</a>
-  </div>
-
-  <table>
-    <tr>
-      <th>N°</th>
-      <th>Día</th>
-      <th>Concepto</th>
-      <th>Monto</th>
-      <th>Obs</th>
-    </tr>
-
-    <% if (ingresos.length === 0) { %>
-    <tr>
-      <td colspan="5">No se registran ingresos en este período</td>
-    </tr>
-    <% } else { %>
-    <% for( let i = 0; i < ingresos.length; i++ ) { %>
-    <tr>
-      <td><%= i + 1 %></td>
-      <td><%= ingresos[i].date %></td>
-      <td><%= ingresos[i].concept %></td>
-      <td>$ <%= ingresos[i].value %></td>
-      <% if (ingresos[i].obs === "") { %>
-      <td>-</th>
-        <% } else {%>
-      <td><%= ingresos[i].obs %></td>
-      <% } %>
-    </tr>
+    <% if (month) { %>
+    <input type="hidden" value=<%= month %> id="month-hidden" />
     <% } %>
-    <% } %>
-  </table>
 
-  <% let totalIngresos = []; %>
-  <% ingresos.forEach(monto => { %>
-  <% totalIngresos = [...totalIngresos, monto.value]%>
-  <% }) %>
-  <% let resultado = totalIngresos.reduce((prev, curr) => prev + curr, 0 )%>
+    <div class="container grid-container-months">
+      <div class="row-container-months row">
+        <div class="col-sm-4 col-md-3 ene">
+          <a href="/ingresos-del-mes/0">Ene</a>
+        </div>
+        <div class="col-sm-4 col-md-3 feb">
+          <a href="/ingresos-del-mes/1">Feb</a>
+        </div>
+        <div class="col-sm-4 col-md-3 mar">
+          <a href="/ingresos-del-mes/2">Mar</a>
+        </div>
+        <div class="col-sm-4 col-md-3 abr">
+          <a href="/ingresos-del-mes/3">Abr</a>
+        </div>
+        <div class="col-sm-4 col-md-3 may">
+          <a href="/ingresos-del-mes/4">May</a>
+        </div>
+        <div class="col-sm-4 col-md-3 jun">
+          <a href="/ingresos-del-mes/5">Jun</a>
+        </div>
+        <div class="col-sm-4 col-md-3 jul">
+          <a href="/ingresos-del-mes/6">Jul</a>
+        </div>
+        <div class="col-sm-4 col-md-3 ago">
+          <a href="/ingresos-del-mes/7">Ago</a>
+        </div>
+        <div class="col-sm-4 col-md-3 sep">
+          <a href="/ingresos-del-mes/8">Sep</a>
+        </div>
+        <div class="col-sm-4 col-md-3 oct">
+          <a href="/ingresos-del-mes/9">Oct</a>
+        </div>
+        <div class="col-sm-4 col-md-3 nov">
+          <a href="/ingresos-del-mes/10">Nov</a>
+        </div>
+        <div class="col-sm-4 col-md-3 dic">
+          <a href="/ingresos-del-mes/11">Dic</a>
+        </div>
+      </div>
+    </div>
 
-  <p>Total de ingresos: $ <span><%= resultado %></span></p>
+    <div class="container-gral-table">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th>Día</th>
+            <th>Concepto</th>
+            <th>Monto</th>
+            <th>Obs</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% if (ingresos.length === 0) { %>
+          <tr>
+            <td colspan="5">No se registran ingresos en este período</td>
+          </tr>
+          <% } else { %>
+          <% for( let i = 0; i < ingresos.length; i++ ) { %>
+          <tr>
+            <td scope="col"><%= i + 1 %></td>
+            <td><%= ingresos[i].date %></td>
+            <td><%= ingresos[i].concept %></td>
+            <td>$ <%= ingresos[i].value %></td>
+            <% if (ingresos[i].obs === "") { %>
+            <td>-</th>
+              <% } else {%>
+            <td><%= ingresos[i].obs %></td>
+            <% } %>
+          </tr>
+          <% } %>
+          <% } %>
+        </tbody>
+      </table>
 
-  <%- include("./fragments/scripts") %>
+      <% let totalIngresos = []; %>
+      <% ingresos.forEach(monto => { %>
+      <% totalIngresos = [...totalIngresos, monto.value]%>
+      <% }) %>
+      <% let resultado = totalIngresos.reduce((prev, curr) => prev + curr, 0 )%>
+
+      <p>Total de ingresos: $ <span><%= resultado %></span></p>
+
+      <%- include("./fragments/scripts") %>
 </body>
 
 </html>
